2013-11-18  Josh Stone  <jistone@redhat.com>

	* dwfl_module_getdwarf.c (find_aux_address_sync): New function.
	(find_aux_sym): Use it.

2013-11-14  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Code cleanup: Remove const in prototype
	* dwfl_frame_regs.c (dwfl_thread_state_registers): Remove const from
	firstreg.
	* libdwfl.h (dwfl_thread_state_registers): Likewise.
	* linux-pid-attach.c (pid_thread_state_registers_cb): Likewise.

2013-11-14  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Fix dwfl_attach_state machine->elf.
	* dwfl_frame.c (dwfl_attach_state): Change parameter machine to elf.
	Call ebl_openbackend instead of ebl_openbackend_machine.
	* libdwfl.h (dwfl_attach_state): Change parameter machine to elf.
	Update the function description.
	* linux-core-attach.c (__libdwfl_attach_state_for_core): Pass CORE to
	dwfl_attach_state.
	* linux-pid-attach.c (__libdwfl_attach_state_for_pid): Pass NULL to
	dwfl_attach_state.

2013-11-06  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Provide __libdwfl_module_getsym to get dwfl_file *.
	* dwfl_module_addrsym.c (dwfl_module_addrsym) (i_to_symfile): Remove.
	(dwfl_module_addrsym) (search_table): New variable file.  Use
	__libdwfl_module_getsym.  Use file.
	* dwfl_module_getsym.c (dwfl_module_getsym): Rename to ...
	(__libdwfl_module_getsym): ... here.  Add parameter filep.  Set it.
	(dwfl_module_getsym): New wrapper.
	* libdwflP.h (__libdwfl_module_getsym): New declaration.

2013-11-13  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Fix dwfl_module_addrsym for minidebuginfo.
	* dwfl_module_addrsym.c (dwfl_module_addrsym): New variable
	addr_symfile.
	(dwfl_module_addrsym) (same_section): Use it.
	(dwfl_module_addrsym) (i_to_symfile): New function.
	(dwfl_module_addrsym) (search_table): Use it.

2013-11-07  Jan Kratochvil  <jan.kratochvil@redhat.com>
	    Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (libdwfl_a_SOURCES): Add dwfl_frame.c, frame_unwind.c,
	dwfl_frame_pc.c, linux-pid-attach.c, linux-core-attach.c and